--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -23,6 +23,10 @@ tr[data-mealExcess="true"] {
     color: red;
 }
 
+tr[data-userEnable="false"] {
+    color: red;
+}
+
 .fa {
     cursor: pointer;
 }
